--- a/docs/04.更多/99.友情链接.md
+++ b/docs/04.更多/99.友情链接.md
@@ -20,16 +20,14 @@
 与我[ 联系 ](/about/#联系)或者 在本页面评论区留言您的友链信息，格式：
 
 ::: tip
-昵称：Evan's blog
+昵称：Superqjq's blog
 
-链接：<https://xugaoyi.com/>
+链接：<https://lovelifeloveyou.github.io/superqjq-blog/>
 
 介绍：积跬步以至千里，喜欢学习喜欢你。
 
-头像：<https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200103123203.jpg>
+头像：<https://cdn.jsdelivr.net/gh/lovelifeloveyou/somePic/blog/timg (1).jpg>
 :::
-
-申请前记得先添加本站哦 ↑（＾∀＾●）ﾉ↑~
 
 
 <style scoped>
