--- a/docs/05.关于/01.关于.md
+++ b/docs/05.关于/01.关于.md
@@ -6,33 +6,51 @@ sidebar: false
 article: false
 ---
 
-### 📚Blog
-这是一个兼具博客文章、知识管理、文档查找的个人网站，主要内容是Web前端技术。如果你喜欢这个博客&主题欢迎到[GitHub](https://github.com/xugaoyi/vuepress-theme-vdoing)点个Star、获取源码，或者交换[友链](/friends/) ( •̀ ω •́ )✧
+### :email: 联系
 
-:::tip
-文章内容仅是我个人的小总结，如有误还请指正。
-:::
+- **WeChat**: qjqdedream77
+- **QQ** <a :href="qqUrl" class='qq'>982412228</a>
+- **Email**:  <a href="mailto:982412228@qq.com">982412228@qq.com</a>
+- **GitHub**: <https://github.com/lovelifeloveyou>
 
-### 🎨Theme
-本站主题是根据[VuePress](https://vuepress.vuejs.org/zh/)的默认主题修改而成。取名`Vdoing`(维度)，旨在轻松打造一个`结构化`与`碎片化`并存的个人在线知识库&博客，让你的知识海洋像一本本书一样清晰易读。配合多维索引，让每一个知识点都可以快速定位！ 更多[详情](https://github.com/xugaoyi/vuepress-theme-vdoing)。
+### 关于作者 / About Me
 
-<a href="https://github.com/xugaoyi/vuepress-theme-vdoing" target="_blank"><img src='https://img.shields.io/github/stars/xugaoyi/vuepress-theme-vdoing' alt='GitHub stars' class="no-zoom"></a>
-<a href="https://github.com/xugaoyi/vuepress-theme-vdoing" target="_blank"><img src='https://img.shields.io/github/forks/xugaoyi/vuepress-theme-vdoing' alt='GitHub forks' class="no-zoom"></a>
+网名：追梦少年强、Superqjq
 
+2019年毕业于景德镇陶瓷大学，在校学习期间发现前端很有意思，2018年6月，也就是大三暑假去到杭州才云科技有限公司实习半年，期间使用react完成公司一些业务，在2019年2月来到上海益政科技有限公司，工作期间，使用vue完成公司澳门政务改革的项目。
 
-### 🐼Me
-从事Web前端开发工作，喜欢唱、跳、rap、篮球，写程序。 本人↓↓↓
+在这两年的参与公司业务开发的过程中，收益颇多，也越发觉得学习是个不断的过程，而且我们需要面对困难，去思考为什么会有这个bug，该怎么解决，有没有更好的方式。
 
-<img src='https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200103123203.jpg' alt='本人照片' style="width:106px;">
+平时利用下班的时间以及周末也在不断学习，现熟练vue和react的使用，也能使用nodejs进行些简单的后端开发。
 
+现在正在找新工作，希望能够加入到贵公司。
 
-[更新日志](https://github.com/xugaoyi/vuepress-theme-vdoing/commits/master)
+### 职业规划 / Career Planning
 
-## :email: 联系
+选择：从一开始，就选择了做前端开发，因为觉得前端开发更贴近用户，能够倾听用户的声音，更好玩，更有意思，美的更直观。我们总是在尝试最新的技术，尝试更炫的效果，希望更能优化用户的体验效果！
 
-- **WeChat or QQ**: <a :href="qqUrl" class='qq'>894072666</a>
-- **Email**:  <a href="mailto:894072666@qq.com">894072666@qq.com</a>
-- **GitHub**: <https://github.com/xugaoyi>
+宗旨：关注用户体验，专注前端技术。
+
+座右铭：爱前端，爱生活！
+
+优势：喜欢涉猎新的技术，喜欢读书。同时前端工程师的价值在于实现复杂的交互细节，细心专注很重要。
+
+劣势：别老抢我睡觉的时间
+
+博客：工作总结，梳理思路，沉淀自己；学习新技术，记录过程，也可以帮助和我一样的同学更快的学习，分享；记录工作轨迹与规划；记录人生的感悟。一起交流，一起分享，一起进步。
+
+### 我眼中的优秀的技术人员
+
+对技术充满热情
+编程是生活的一部分
+会在你的耳边谈论技术相关的话题，如果你有兴趣的话
+主动学习新技术
+对自己不能认同的技术，感到不适应，无法全身心投入
+聪明，对很多话题都感兴趣
+在大学之前就开始接触编程了
+有隐藏的冰山，自己完成的大项目
+对许多不相关的技术有了解
+
 
 <script>
   export default {
